@@ -5,8 +5,9 @@ CHANGELOG
 2021-07-03
 ----------
 ### Changelog extractor
-* Add support for time-machine logs (rst)
-* Tests: add tests for base
+* Add support for time-machine changelogs (rst).
+* Tests: add tests for base.
+* Add support for passivetotal changelogs (markdown).
 
 2020-04-02
 ----------
